--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "grunt-contrib-connect": "~0.5.0",
     "grunt-contrib-qunit": "~0.2.0",
     "grunt-contrib-nodeunit": "~0.2.0",
-    "browserstack-runner": "~0.1.3"
+    "browserstack-runner": "0.1.X"
   },
   "scripts": {
     "test": "./node_modules/.bin/grunt test"
